--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <!--Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--Icons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <!--Estilos-->
   <link rel="stylesheet" href="style/style.css">
   <title>Pearson Hardman</title>
 </head>
@@ -26,17 +23,41 @@
       <nav id="navbar">
         <a href="#header">Inicio</a>
         <a href="#expertice-areas">Serviços</a>
-        <a href="about">Sobre</a>
+        <a href="#about">Sobre</a>
         <a href="#team">Time</a>
         <a href="#contact">Contato</a>
       </nav>
     </div>
-    <div class="banner">
+    <i class="bi bi-list" id="menu"></i>
+    <nav id="mobile-navbar">
+      <i class="bi bi-x-lg" id="close-menu"></i>
+      <a href="#header">Início</a>
+      <a href="#expertise-areas">Serviços</a>
+      <a href="#about">Sobre</a>
+      <a href="#team">Time</a>
+      <a href="#contact">Contato</a>
+    </nav>
+    <div class="banner active">
       <span class="square"></span>
       <h2>Melhores experts em direito do país</h2>
       <p>
         Os advogados mais bem qualificados estão aqui, agende uma reunião e
         conheça nosso time
+      </p>
+    </div>
+    <div class="banner">
+      <span class="square"></span>
+      <h2>Conheça o nosso time</h2>
+      <p>
+        Veja as especialidades dos nossos advogados, e entenda como eles podem
+        lhe ajudar
+      </p>
+    </div>
+    <div class="banner">
+      <span class="square"></span>
+      <h2>Os nossos resultados</h2>
+      <p>
+        Confira as nossas métricas e conheça os resultados que já obtivemos
       </p>
     </div>
     <div class="dots">
@@ -45,7 +66,7 @@
       <div class="dot"></div>
     </div>
   </header>
-  <main id="expertise-areas" class="text-image-section">
+  <main id="expertice-areas" class="text-image-section">
     <div id="expertise-information" class="text-container">
       <p class="section-subtitle">Áreas de atuação</p>
       <h3 class="section-title">
@@ -277,5 +298,6 @@
     </div>
   </footer>
 </body>
+<script src="js/scripts.js"></script>
 
 </html>
